@@ -375,7 +375,7 @@ namespace tgui
         /// @internal
         /// @brief Call all connected signal handlers
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-        bool emit(const ChildWindow* param);
+        bool emit(ChildWindow* param);
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
